crates/css_ast/tests/snapshots/postcss_snapshots__postcss_extends.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
StyleSheet(
  rules: [
    UnknownQualifiedRule(QualifiedRule(
      prelude: ComponentValues(
        values: [
          Ident(Cursor(
            kind: "Ident",
            offset: SourceOffset(0),
            len: 3,
          )),
          Colon(Cursor(
            kind: "Colon",
            offset: SourceOffset(3),
            len: 1,
          )),
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(4),
            len: 1,
          )),
          Number(Cursor(
            kind: "Number",
            offset: SourceOffset(5),
            len: 1,
          )),
          Semicolon(Cursor(
            kind: "Semicolon",
            offset: SourceOffset(6),
            len: 1,
          )),
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(7),
            len: 2,
          )),
          Ident(Cursor(
            kind: "Ident",
            offset: SourceOffset(9),
            len: 1,
          )),
        ],
      ),
      block: Block(
        open_curly: LeftCurly(Cursor(
          kind: "LeftCurly",
          offset: SourceOffset(11),
          len: 1,
        )),
        declarations: [
          Declaration(
            name: Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(17),
              len: 3,
            )),
            colon: Colon(Cursor(
              kind: "Colon",
              offset: SourceOffset(20),
              len: 1,
            )),
            value: Unknown(ComponentValues(
              values: [
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(21),
                  len: 1,
                )),
                Number(Cursor(
                  kind: "Number",
                  offset: SourceOffset(22),
                  len: 1,
                )),
              ],
            )),
            important: None,
            semicolon: Some(Semicolon(Cursor(
              kind: "Semicolon",
              offset: SourceOffset(23),
              len: 1,
            ))),
          ),
        ],
        rules: [
          ComponentValues(
            values: [
              Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(29),
                len: 1,
              )),
              Whitespace(Cursor(
                kind: "Whitespace",
                offset: SourceOffset(30),
                len: 1,
              )),
              SimpleBlock(
                open: PairWiseStart(Cursor(
                  kind: "LeftCurly",
                  offset: SourceOffset(31),
                  len: 1,
                )),
                values: ComponentValues(
                  values: [
                    Whitespace(Cursor(
                      kind: "Whitespace",
                      offset: SourceOffset(32),
                      len: 9,
                    )),
                    Ident(Cursor(
                      kind: "Ident",
                      offset: SourceOffset(41),
                      len: 5,
                    )),
                    Colon(Cursor(
                      kind: "Colon",
                      offset: SourceOffset(46),
                      len: 1,
                    )),
                    Whitespace(Cursor(
                      kind: "Whitespace",
                      offset: SourceOffset(47),
                      len: 1,
                    )),
                    Number(Cursor(
                      kind: "Number",
                      offset: SourceOffset(48),
                      len: 1,
                    )),
                    Semicolon(Cursor(
                      kind: "Semicolon",
                      offset: SourceOffset(49),
                      len: 1,
                    )),
                  ],
                ),
                close: Some(PairWiseEnd(Cursor(
                  kind: "RightCurly",
                  offset: SourceOffset(55),
                  len: 1,
                ))),
              ),
              Whitespace(Cursor(
                kind: "Whitespace",
                offset: SourceOffset(56),
                len: 1,
              )),
            ],
          ),
        ],
        close_curly: Some(RightCurly(Cursor(
          kind: "RightCurly",
          offset: SourceOffset(57),
          len: 1,
        ))),
      ),
    )),
  ],
)
