crates/css_ast/tests/snapshots/postcss_snapshots__postcss_inside.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
StyleSheet(
  rules: [
    StyleRule(
      rule: QualifiedRule(
        prelude: SelectorList([
          (CompoundSelector([
            Tag(Html(A(Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(0),
              len: 1,
            ))))),
          ]), None),
        ]),
        block: Block(
          open_curly: LeftCurly(Cursor(
            kind: "LeftCurly",
            offset: SourceOffset(2),
            len: 1,
          )),
          declarations: [],
          rules: [
            UnknownAtRule(
              name: AtKeyword(Cursor(
                kind: "AtKeyword",
                offset: SourceOffset(4),
                len: 7,
              )),
              prelude: ComponentValues(
                values: [
                  Whitespace(Cursor(
                    kind: "Whitespace",
                    offset: SourceOffset(11),
                    len: 1,
                  )),
                  String(Cursor(
                    kind: "String",
                    offset: SourceOffset(12),
                    len: 7,
                  )),
                  Whitespace(Cursor(
                    kind: "Whitespace",
                    offset: SourceOffset(19),
                    len: 1,
                  )),
                ],
              ),
              block: ComponentValues(
                values: [],
              ),
            ),
          ],
          close_curly: Some(RightCurly(Cursor(
            kind: "RightCurly",
            offset: SourceOffset(20),
            len: 1,
          ))),
        ),
      ),
    ),
  ],
)
